--- a/martin verbeek.html
+++ b/martin verbeek.html
@@ -32,6 +32,9 @@
         <li><a href="martin verbeek.html">Martin Verbeek</a>
     </ul>
   </nav>
+  <main>
+    Ik ben Martin verbeek
+  </main>
 <footer id="footerbar">
           <class="copyright">
                 Daan Stein en Martin Verbeek © 2017
